--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.lint.dependencies]
@@ -18,6 +19,8 @@ isort = "^5.13.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
+psycopg2 = "^2.9.10"
+requests = "^2.32.3"
 
 [build-system]
 requires = ["poetry-core"]
